--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/3.png" type="image/png">
-    <title>Mochilero</title>
+    <title>Mo</title>
 </head>
 <body>
     <header>
