--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         
         <div class="contenedor">
-            <h1 class="icon-camera">Mochilero</h1>
+            <h1 class="icon-camera">Mo</h1>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar"></label>
             
