--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/3.png" type="image/png">
-    <title>Mo</title>
+    <title>Mochilero</title>
 </head>
 <body>
     <header>
         
         <div class="contenedor">
-            <h1 class="icon-camera">Mo</h1>
+            <h1 class="icon-camera">Mochilero</h1>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar"></label>
             
